HV-1187 Add required --add-opens options
Switch to gmavenplus and Groovy 2.4.8-SNAPSHOT