@@ -184,8 +184,8 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>update-modules</id>
@@ -194,11 +194,25 @@
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>${pom.basedir}/src/script/setupModules.groovy</source>
+                            <scripts>
+                                <script>file://${pom.basedir}/src/script/setupModules.groovy</script>
+                            </scripts>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>jdk9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <properties>
+                <!-- required by Arquillian to connect to the JMX interface of WildFly -->
+                <maven-surefire-plugin.argLine.add-opens>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED</maven-surefire-plugin.argLine.add-opens>
+            </properties>
+        </profile>
+    </profiles>
 </project>
