@@ -126,18 +126,28 @@
 
         <puppycrawl.checkstyle.version>7.1</puppycrawl.checkstyle.version>
 
+        <groovy.version>2.4.8-SNAPSHOT</groovy.version>
+
         <!--
         Do not upgrade Surefire and Failsafe to 2.19+.
         See https://hibernate.atlassian.net/browse/HV-1117
         -->
-        <maven.surefire.version>2.18.1</maven.surefire.version>
+        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
 
         <!-- Used to add further arguments to the arg line for specific sub-modules and profiles -->
-        <surefire.argLine></surefire.argLine>
-        <surefire.argLine.extension></surefire.argLine.extension>
+        <maven-surefire-plugin.argLine></maven-surefire-plugin.argLine>
+        <maven-surefire-plugin.argLine.add-modules></maven-surefire-plugin.argLine.add-modules>
+        <maven-surefire-plugin.argLine.add-opens></maven-surefire-plugin.argLine.add-opens>
 
-        <!-- Names of modules to be passed via "add-modules" option when forking java (through Surefire) or javadoc  on Java 9 -->
-        <jigsaw.modules>java.xml.bind</jigsaw.modules>
+        <!--
+        Names of modules to be passed via "add-modules" option when forking java through Surefire and javadoc
+        plugins on Java 9
+        -->
+        <maven-surefire-plugin.jigsaw.modules>java.xml.bind</maven-surefire-plugin.jigsaw.modules>
+        <maven-javadoc-plugin.jigsaw.modules>java.xml.bind</maven-javadoc-plugin.jigsaw.modules>
+        
+        <!-- add-opens options required for Arquillian and WildFly -->
+        <arquillian.javaVmArguments.add-opens></arquillian.javaVmArguments.add-opens>
     </properties>
 
     <prerequisites>
@@ -245,7 +255,7 @@
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-jsr223</artifactId>
-                <version>2.4.7</version>
+                <version>${groovy.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.easymock</groupId>
@@ -484,19 +494,19 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven.surefire.version}</version>
+                    <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <forkMode>once</forkMode>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
-                        <argLine>${surefire.argLine} ${surefire.argLine.extension}</argLine>
+                        <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-modules} ${maven-surefire-plugin.argLine.add-opens}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>${maven.surefire.version}</version>
+                    <version>${maven-surefire-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>generate-test-report</id>
@@ -513,7 +523,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>${maven.surefire.version}</version>
+                    <version>${maven-surefire-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>integration-test</id>
@@ -521,6 +531,9 @@
                                 <goal>integration-test</goal>
                                 <goal>verify</goal>
                             </goals>
+                            <configuration>
+                                <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-modules} ${maven-surefire-plugin.argLine.add-opens}</argLine>
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
@@ -653,9 +666,16 @@
                     <version>${org.codehaus.mojo.chronos.version}</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.gmaven</groupId>
-                    <artifactId>gmaven-plugin</artifactId>
+                    <groupId>org.codehaus.gmavenplus</groupId>
+                    <artifactId>gmavenplus-plugin</artifactId>
                     <version>1.5</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.codehaus.groovy</groupId>
+                            <artifactId>groovy-all</artifactId>
+                            <version>${groovy.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.servicemix.tooling</groupId>
@@ -749,13 +769,13 @@
                                 <pluginExecution>
                                     <pluginExecutionFilter>
                                         <groupId>
-                                            org.codehaus.gmaven
+                                            org.codehaus.gmavenplus
                                         </groupId>
                                         <artifactId>
-                                            gmaven-plugin
+                                            gmavenplus-plugin
                                         </artifactId>
                                         <versionRange>
-                                            [1.4,)
+                                            [1.5,)
                                         </versionRange>
                                         <goals>
                                             <goal>execute</goal>
@@ -879,7 +899,23 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <surefire.argLine.extension>--add-modules ${jigsaw.modules}</surefire.argLine.extension>
+                <maven-surefire-plugin.argLine.add-modules>--add-modules=${maven-surefire-plugin.jigsaw.modules}</maven-surefire-plugin.argLine.add-modules>
+                <arquillian.javaVmArguments.add-opens>
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.security=ALL-UNNAMED
+                    --add-opens=java.base/java.math=ALL-UNNAMED
+                    --add-opens=java.base/java.io=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                    --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+                    --add-opens=java.management/javax.management=ALL-UNNAMED
+                    --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
+                    --add-opens=java.naming/javax.naming=ALL-UNNAMED
+                </arquillian.javaVmArguments.add-opens>
             </properties>
         </profile>
     </profiles>
